# giga_chat_api

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  index.html  pyproject.toml  pytest.ini  requirements.txt
src/: gemini_client.py  giga_chat_client.py  main.py  main_config.py  schemas.py
src/database/: config.py  db_depends.py
src/migrations/: env.py
src/migrations/versions/: 2025_12_03_0457-3ca1cec6ff6a_rm_mig.py
src/models/: requests_model.py
src/repository/: crud.py
src/routers/: __init__.py  handlers.py  requests.py
tests/: conftest.py  requests_api.py  test_handlers_api.py  test_main.py  test_schemas.py
